# gitlab-agent

./: .env.prod.sample  .env.sample  CLAUDE.md  Makefile  README.md
Backend/: pyproject.toml
Backend/app/: main.py
Backend/app/agents/: command_agent.py  smart_agent.py
Backend/app/agents/commands/: describe.py  review.py
Backend/app/api/: deps.py  main.py
Backend/app/api/routes/: admin.py  auth.py  bot.py  config.py
Backend/app/auth/: gitlab.py  jwt.py  password.py
Backend/app/core/: config.py  log.py
Backend/app/db/: database.py  models.py
Backend/app/schemas/: admin.py  bot.py  config.py
Backend/app/services/: app_settings_service.py  event_handlers.py
Backend/scripts/: create_admin.py
Frontend/: openapi.json  package-lock.json
Frontend/src/: hey-api.ts
Frontend/src/app/: layout.tsx
Frontend/src/app/admin/: layout.tsx  page.tsx
Frontend/src/app/admin/login/: page.tsx
Frontend/src/app/admin/settings/gitlab/: page.tsx
Frontend/src/app/admin/settings/llms/: page.tsx
Frontend/src/app/dashboard/: page.tsx
Frontend/src/app/login/: page.tsx
Frontend/src/client/: sdk.gen.ts  types.gen.ts  zod.gen.ts
Frontend/src/client/client/: types.gen.ts
Frontend/src/client/core/: params.gen.ts
Frontend/src/components/: bots-table.tsx
Frontend/src/components/ui/: confirm-dialog.tsx  toast.tsx
Frontend/src/lib/admin-auth/: index.ts  protected.tsx  refresh.ts  tokens.ts
Frontend/src/lib/auth/: provider.tsx
docker/: Frontend.Dockerfile  docker-compose-all.yml  docker-compose.yml
