[project]
name = "GitLab-Agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.37.0",
    "pydantic-ai>=1.9.1",
    "pydantic-settings>=2.11.0",
    "python-gitlab>=7.0.0",
    "logfire>=4.13.2",
    "pyjwt>=2.10.1",
    "bcrypt>=4.1",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.12.3",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "pymongo>=4.15.4",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
